# photome

./: .gitignore  AGENTS.md  AGENTS_LIGHT.md  CLAUDE.md  README.md  pyproject.toml
.cursor/plans/: embedding_search_review_3b1cd1d2.plan.md
app/api/: ai_pack.py  gallery.py  media.py  people.py  router.py  scan.py  search.py  status.py
app/core/: contracts.py  lifecycle.py  settings.py
app/db/: bootstrap.py  session.py
app/models/: __init__.py  media.py  person.py  semantic.py  tag.py
app/scheduler/: service.py
app/services/analysis/: auto_tags.py  clip_concepts.yaml
app/services/caption/: moondream.py  registry.py
app/services/embedding/: clip.py
app/services/geocoding/: __init__.py  cached.py
app/services/metadata/: service.py
app/services/ocr/: service.py
app/services/processing/: incremental.py  pipeline.py  registry.py
app/services/scanner/: service.py
app/services/search/: backend.py  benchmark.py  hybrid.py  planner.py  query_translate.py  tag_synonyms.yaml  tokenizer.py  vector.py  vocab.py  vocab_seed.yaml
docs/: INTEGRATION_PLAN.md  README.md
docs/engineering/: ARCHITECTURE.md  PHASE2_SEARCH_TECH_REVIEW.md  PLAN.md
docs/integrations/: GITHUB_AGENT_WEBHOOKS.md
docs/ops/: PACKAGING_STRATEGY.md  RUNBOOK.md
docs/product/: PRODUCT_HISTORY.md  PROJECT_BRIEF.md  STATUS_SNAPSHOT.md
docs/qa/: SCENARIO_VALIDATION_MATRIX.md
scripts/: local_ai_pack.py  materialize_auto_tags.py
tests/: test_auto_tags.py  test_hybrid_search_service.py  test_scenario_validation.py  test_search_api.py  test_tagging_pipeline.py
(+2 files in other folders)
